global replace of String.format with .formatted